# pythonProject1

./: .env  .flake8  .gitignore  .gitignore   README.md  main.py  pyproject.toml
src/: __init__.py  calculate.py  decorators.py  external.api.py  generators.py  main.py  masks.py  re.py  requirements.txt  transaction.py  transaction_reader.py  utils.py  widget.py
src/processing/: init.py  processing.py
tests/: conftest.py  pytest13.2.py  test_decorators.py  test_generators.py  test_my_module.py  test_transaction_reader.py  test_utils.py
