[project]
name = "liza"
version = "1"
description = "1"
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.2.0,<3.0.0",  # Добавляем pandas
    "openpyxl>=3.1.0,<4.0.0", # Добавляем openpyxl для Excel
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

# Секция для настроек Poetry
[tool.poetry]
package-mode = false # <--- ЭТА СТРОКА РЕШАЕТ ПРОБЛЕМУ "No file/folder found for package liza"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.1.1"
black = "^25.1.0"
isort = "^6.0.0"
mypy = "^1.14.1"
pytest = "^8.3.5"

[tool.black]
line-length = 88
target-version = ['py38'] # Убедитесь, что это соответствует вашей целевой версии Python для Black

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
strict = true

